<resources>
    <string name="app_name">My Movies</string>
    <string name="add_movie_string">Add Movie</string>
    <string name="edit_string">Edit</string>
    <string name="delete_MovieString">Delete Movie</string>
    <string name="show_listString">Show List by Year</string>
    <string name="string_showRating">Show List by Rating</string>
    <string name="string_name">Title:  </string>
    <string name="movie_name">Enter Movie Name</string>
    <string name="string_description">Description:</string>
    <string name="enter_description">Describe Movie</string>
    <string name="string_genre">Genre:  </string>
    <string name="string_rating">Rating:  </string>
    <string name="string_year">Year:  </string>
    <string name="string_imdb">IMDB:  </string>
    <string name="genre_prompt">Select</string>
    <string name="string_saveChanges">Save Changes</string>
    <string name="string_finish">Finish</string>
    <string name="string_sortYear">Movies by Year</string>
    <string name="string_sortRating">Movies by Rating</string>
    <string name="string_AddMovie">Add Movie</string>
    <string name="string_EditMovie">Edit Movie</string>
    <string name="string_YearMovie">Movies by Year</string>
    <string name="string_RateMovie">Movies by Rating</string>
    <string-array name="genre_array">
        <item>Select</item>
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>
    <string-array name="genre_array_edit">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
