<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rekhansh.inclass08w.AddMovie">

    <RelativeLayout
        android:id="@+id/activity_add_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:theme="@style/Theme.AppCompat.Light">

        <EditText
            android:id="@+id/editText_name"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_name"
            android:layout_alignBottom="@+id/text_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_toRightOf="@+id/text_name"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="@integer/name_length" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView_year"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView_year"
            android:layout_marginTop="20dp"
            android:text="@string/string_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_name"
            android:layout_marginTop="12dp"
            android:text="@string/string_description"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_description"
            android:layout_marginTop="20dp"
            android:text="@string/string_genre"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_rating"
            android:layout_marginTop="37dp"
            android:text="@string/string_year"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText_imdb"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/string_imdb"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView_genre"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/textView_rating"
            android:layout_toRightOf="@+id/textView_rating"
            android:dropDownWidth="match_parent"
            android:gravity="center_horizontal"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editText_year"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView_year"
            android:layout_alignLeft="@+id/editText_name"
            android:layout_alignStart="@+id/editText_name"
            android:ems="10"
            android:inputType="numberSigned"
            android:maxLength="4"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_imdb"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seekBar_rate"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/seekBar_rate"
            android:layout_below="@+id/editText_year"
            android:ems="10"
            android:inputType="textWebEditText"
            android:maxLength="50"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_categories"
            android:layout_marginTop="23dp"
            android:text="@string/string_rating"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_addMovietoList"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_movie_string"
            android:textAllCaps="false"
            android:theme="@android:style/Widget.Material.Button" />

        <SeekBar
            android:id="@+id/seekBar_rate"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_year"
            android:layout_alignStart="@+id/editText_year"
            android:layout_alignTop="@+id/textView_rating"
            android:max="@integer/max_rating" />

        <TextView
            android:id="@+id/textView_rate2"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView_year"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/seekBar_rate"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_description"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_description"
            android:layout_marginTop="11dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="@integer/description_length"
            android:padding="5dp" />
    </RelativeLayout>

</FrameLayout>
